remove twitter credentials

--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -1,5 +1,5 @@
 twitter:
-  consumer_key: rizxIZ5tWC8TEUNElLD8Cw
-  consumer_secret: 9F0rSBayH73x6J0dmyxtNvokl59Yv1yjoCf33bs
-  oauth_token: 7256962-88V7NhDNtqADDXAbQBqiU09jmwMZwL1aDhjiP9yU
-  oauth_token_secret: oJiMVAHJehXtp54aEFFv2wRY6iIycs5lOKER3LNo
+  consumer_key: MY_CONSUMER_KEY
+  consumer_secret: MY_CONSUMER_SECRET
+  oauth_token: MY_OAUTH_TOKEN
+  oauth_token_secret: MY_OAUTH_TOKEN_SECRET
